# idasen

./: .gitignore  CHANGELOG.md  LICENSE  README.rst  conftest.py  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
contrib/systemd/: ikea-idasen-sit.service  ikea-idasen-sit.timer  ikea-idasen-stand.service  ikea-idasen-stand.timer
docs/: api.rst  changelog.rst  cli.rst  conf.py  index.rst  references.rst  requirements.txt
idasen/: __init__.py  cli.py
tests/: test_cli.py  test_idasen.py
