[tool.poetry]
name = "idasen"
description = "ikea IDÅSEN desk API and CLI."
authors = ["Alex Martens <alex@thinglab.org>"]
version = "0.12.0"
license = "MIT"
readme = "README.rst"
repository = "https://github.com/newAM/idasen"
documentation = "https://newam.github.io/idasen"
keywords = ["ikea", "idasen", "bluetooth", "linak", "ble"]

[tool.poetry.dependencies]
python = "^3.9"

bleak = ">=0.15"
pyyaml = ">=5.3.1"
voluptuous = ">=0.12"

[tool.poetry.dev-dependencies]
coveralls = "^3"
mypy = "^1.14"
pytest = "^8.3.4"
pytest-asyncio = "^0.24"
pytest-cov = "^5.0.0"
ruff = "^0.9.1"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^3.0.2"
toml = "^0.10.2"
types-PyYAML = "^6.0.12"

[tool.poetry.scripts]
idasen = "idasen.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff.lint]
# Add flake8-bugbear and pep8-naming rules
extend-select = ["B", "N"]
